--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
-<body>
+	<head>
+		<title>XXX</title>
+		<link rel="stylesheet" type="text/css" href="xxx.css">
+	</head>
 
-<h1>YEYYY</h1>H1>
+	<body>
 
-</body>
+		<h1>Shane Carla Serrano</h1>
+
+
+	</body>
 </html>
 
 
