--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>XXX</title>
+		<title>LOL</title>
 		<link rel="stylesheet" type="text/css" href="xxx.css">
 	</head>
 
 	<body>
-
+		<br>
+		<br>
+		<br>
+		<center>
+		<img src="wew.jpg" alt="Me" style="height:170px;width:120px;">
+		</center>
 		<h1>Shane Carla Serrano</h1>
-
+		<p>
+			<br>BS Computer Science</br>
+			<br>2014-03286</br>
+			<br> About Me: I'M LAZY AF</br>
+			<br>Expectations: WALA PO. MASHEKERT PO MAG EXPECT CHAR</br>
+			<br>FIRST TAKE OF CMSC 100</br>
+			<br>Contact No: 09256007282 </br>
+		</p>
 
 	</body>
 </html>
